# polymarket_v2.1

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DATA_MODEL.md
src/: __init__.py  clob_client.py  config.py  market_tracker.py  models.py  strategy_engine.py
web/: __init__.py  api.py
web/static/: btc.html  eth.html  index.html  sol.html  style.css  xrp.html
